[tool.poetry]
name = "aiowhois"
version = "0.1.0"
description = "Python Asyncio WHOIS Protocol Client"
authors = ["Bruno Alano Medina <bruno@std.sh>"]
license = "MIT"

readme = "README.md"
repository = "https://github.com/brunoalano/aiowhois"

[tool.poetry.dependencies]
python = "^3.6"
aiodns = "^1.1"
tldextract = "^2.2"
aiohttp = "^3.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-asyncio = "^0.9.0"
tox = "^3.5"
pytest-cov = "^2.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
